# StratosphereLibSlips

./: .gitignore  CONTRIBUTIONS  Makefile.am  Makefile.in  README.md  bootstrap.sh  cleanup.sh  config.h  config.h.in~  configure  configure.ac  libtool  preamble
code/: Makefile.am  Makefile.in  functional_test.conf  functional_test.sh  slips.conf  testslips.cc
code/.deps/: slips-testslips.Po
code/netflows/: 2013-08-20_capture-win2.binetflow
src/: Makefile.am  Makefile.in  constants.h  markov_chains.cc  markov_chains.h  markov_models_1.cc  markov_models_1.h  processor.cc  processor.h  slips.cc  slips.h  util.cc  util.h
src/.deps/: markov_chains.Plo  markov_models_1.Plo  processor.Plo  slips.Plo  util.Plo
